# idb-utils

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  city2.ibd  idb-corrupter.pl  idb-findpage.pl  idb-findtsid.pl  idb-liveinfo.pl  idb-pages.pl  idb-parse.pl  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  mysql-matrix.yml  npm.yml  pages.yml  release.yml
IdbHelpers/: Changes  MANIFEST  Makefile.PL  README  Todo
IdbHelpers/lib/: IdbHelpers.pm
IdbHelpers/t/: 001_load.t
benches/: benchmarks.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md  quick-start.md
docs/src/cli/: audit.md  backup.md  binlog.md  checksum.md  compat.md  completions.md  comply.md  corrupt.md  defrag.md  diff.md  dump.md  export.md  find.md  health.md  info.md  log.md  overview.md  pages.md  parse.md  recover.md  repair.md  schema.md  sdi.md  simulate.md  timeline.md  transplant.md  tsid.md  undelete.md  undo.md  validate.md  verify.md  watch.md
docs/src/guides/: audit-logging.md  backup-analysis.md  backup-verification.md  binlog-parsing.md  bloat-scoring.md  crash-recovery.md  data-type-decoding.md  encrypted-tablespaces.md  gdpr-verification.md  innodb-primer.md  json-output.md  live-validation.md  lob-chain-traversal.md  spatial-fts-indexes.md  undo-log-analysis.md  upgrade-compatibility.md  vendor-support.md  version-matrix.md
docs/src/internals/: binlog.md  fts.md  lob.md  spatial.md  undo.md
docs/src/reference/: checksum-algorithms.md  page-types.md  redo-log-format.md
docs/src/web/: getting-started.md  overview.md
docs/theme/: head.hbs
includes/: helpers.pm
npm/: README.md  package.json
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/: inno.rb
src/: lib.rs  main.rs  wasm.rs
src/binlog/: checksum.rs  constants.rs  correlate.rs  event.rs  events.rs  file.rs  header.rs  mod.rs  row_image.rs
src/cli/: app.rs  audit.rs  backup.rs  binlog.rs  checksum.rs  compat.rs  comply.rs  corrupt.rs  defrag.rs  diff.rs  dump.rs  export.rs  find.rs  health.rs  info.rs  log.rs  mod.rs  pages.rs  parse.rs  recover.rs  repair.rs  schema.rs  sdi.rs  simulate.rs  timeline.rs  transplant.rs  tsid.rs  undelete.rs  undo.rs  validate.rs  verify.rs  watch.rs
src/innodb/: backup.rs  btree.rs  checksum.rs  compat.rs  compliance.rs  compression.rs  constants.rs  corruption.rs  decryption.rs  encryption.rs  export.rs  field_decode.rs  fts.rs  health.rs  index.rs  keyring.rs  lob.rs  log.rs  mod.rs  page.rs  page_types.rs  record.rs  rtree.rs  schema.rs  sdi.rs  simulate.rs  tablespace.rs  timeline.rs  undelete.rs  undo.rs  validate.rs  vendor.rs  verify.rs  write.rs
src/util/: audit.rs  fs.rs  hex.rs  mod.rs  mysql.rs  prometheus.rs
tests/: audit_test.rs  checksum_debug.rs  compat_test.rs  completions_test.rs  comply_test.rs  correlate_test.rs  defrag_test.rs  diff_test.rs  encryption_test.rs  export_test.rs  find_test.rs  health_test.rs  integration_test.rs  mariadb_test.rs  rebuild_test.rs  repair_test.rs  timeline_test.rs  transplant_test.rs  verify_test.rs  watch_test.rs  write_ops_edge_test.rs
tests/fixtures/mysql9/: README.md  mysql90_compressed.ibd  mysql90_multipage.ibd  mysql90_redo_10  mysql90_redo_9  mysql90_standard.ibd  mysql91_compressed.ibd  mysql91_multipage.ibd  mysql91_redo_10  mysql91_redo_9  mysql91_standard.ibd
tests/fixtures/percona/: README.md  percona80_compressed.ibd  percona80_multipage.ibd  percona80_standard.ibd  percona84_compressed.ibd  percona84_multipage.ibd  percona84_standard.ibd
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: CNAME  robots.txt  sitemap.xml
web/src/: main.js  style.css  wasm.js
web/src/components/: audit.js  backup.js  binlog.js  btree.js  checksums.js  compat.js  diff.js  dropzone.js  health.js  heatmap.js  hex.js  overview.js  pages.js  recovery.js  redolog.js  schema.js  sdi.js  share.js  simulate.js  spatial.js  tabs.js  timeline.js  undelete.js  undo.js  verify.js
web/src/utils/: analytics.js  consent.js  export.js  health-ui.js  help.js  html.js  keyboard.js  navigation.js  theme.js  turnstile.js
worker/: README.md  wrangler.toml
worker/src/: index.js
