[package]
name = "innodb-utils"
version = "1.2.4"
edition = "2021"
description = "InnoDB file analysis toolkit"
license = "MIT"
repository = "https://github.com/ringo380/idb-utils"
homepage = "https://github.com/ringo380/idb-utils"
readme = "README.md"
keywords = ["innodb", "mysql", "database", "ibd", "forensics"]
categories = ["command-line-utilities", "database"]
exclude = [".env", ".DS_Store", "Dockerfile", "IdbHelpers/", "*.ibd"]

[[bin]]
name = "inno"
path = "src/main.rs"

[lib]
name = "idb"

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
crc32c = "0.6"
thiserror = "2"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.18"
flate2 = "1"
lz4_flex = "0.11"
rand = "0.9"
mysql_async = { version = "0.36", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
mysql = ["dep:mysql_async", "dep:tokio"]

[package.metadata.docs.rs]
all-features = true
