[package]
name = "innodb-utils"
version = "2.0.0"
edition = "2021"
description = "InnoDB file analysis toolkit"
license = "MIT"
repository = "https://github.com/ringo380/idb-utils"
homepage = "https://github.com/ringo380/idb-utils"
readme = "README.md"
keywords = ["innodb", "mysql", "database", "ibd", "forensics"]
categories = ["command-line-utilities", "database"]
exclude = [".env", ".DS_Store", "Dockerfile", "IdbHelpers/", "*.ibd"]

[[bin]]
name = "inno"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "idb"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1"
crc32c = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
lz4_flex = "0.11"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
sha2 = "0.10"

# CLI-only deps (gated behind `cli` feature)
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.18", optional = true }
ctrlc = { version = "3", optional = true }
chrono = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

# MySQL query support (requires CLI)
mysql_async = { version = "0.36", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored", "dep:indicatif", "dep:ctrlc", "dep:chrono", "dep:rand"]
mysql = ["dep:mysql_async", "dep:tokio", "cli"]

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
