[package]
name = "innodb-utils"
version = "4.0.2"
edition = "2021"
description = "InnoDB file analysis toolkit"
license = "MIT"
repository = "https://github.com/ringo380/idb-utils"
homepage = "https://github.com/ringo380/idb-utils"
readme = "README.md"
keywords = ["innodb", "mysql", "database", "ibd", "forensics"]
categories = ["command-line-utilities", "database"]
exclude = [".env", ".DS_Store", "Dockerfile", "IdbHelpers/", "*.ibd"]

[[bin]]
name = "inno"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "idb"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1"
crc32c = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
lz4_flex = "0.12"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
sha2 = "0.10"

# CLI-only deps (gated behind `cli` feature)
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
indicatif = { version = "0.18", optional = true }
ctrlc = { version = "3", optional = true }
chrono = { version = "0.4", optional = true }
rand = { version = "0.10", optional = true }
rayon = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }
fs2 = { version = "0.4", optional = true }
clap_complete = { version = "4", optional = true }

# MySQL query support (requires CLI)
mysql_async = { version = "0.36", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
byteorder = "1"
crc32c = "0.6"
clap_complete = "4"
criterion = { version = "0.8", features = ["html_reports"] }
rayon = "1"

[[bench]]
name = "benchmarks"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored", "dep:indicatif", "dep:ctrlc", "dep:chrono", "dep:rand", "dep:rayon", "dep:memmap2", "dep:fs2", "dep:clap_complete"]
mysql = ["dep:mysql_async", "dep:tokio", "cli"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.deb]
maintainer = "Ryan Robson <ryan@ringo380.com>"
copyright = "2026, Ryan Robson"
extended-description = "InnoDB file analysis toolkit for parsing, validating, and inspecting MySQL/InnoDB tablespace files (.ibd), redo logs, and system tablespaces."
section = "database"
priority = "optional"
assets = [
    ["target/release/inno", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/innodb-utils/", "644"],
    ["LICENSE", "usr/share/doc/innodb-utils/", "644"],
    ["target/release/build/innodb-utils-*/out/completions/inno.bash", "usr/share/bash-completion/completions/inno", "644"],
    ["target/release/build/innodb-utils-*/out/completions/_inno", "usr/share/zsh/vendor-completions/", "644"],
    ["target/release/build/innodb-utils-*/out/completions/inno.fish", "usr/share/fish/vendor_completions.d/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/inno", dest = "/usr/bin/inno", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/innodb-utils/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/innodb-utils/LICENSE", mode = "644" },
    { source = "target/release/build/innodb-utils-*/out/completions/inno.bash", dest = "/usr/share/bash-completion/completions/inno", mode = "644" },
    { source = "target/release/build/innodb-utils-*/out/completions/_inno", dest = "/usr/share/zsh/vendor-completions/_inno", mode = "644" },
    { source = "target/release/build/innodb-utils-*/out/completions/inno.fish", dest = "/usr/share/fish/vendor_completions.d/inno.fish", mode = "644" },
]

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
